Made some edits to index file and css file

--- a/index.html
+++ b/index.html
@@ -8,13 +8,18 @@
 
 	<body>
 		<h1>Dylan Matthew Smith</h1>
-			<img src="https://www.dogzone.com/images/breeds/beagle.jpg" alt=""/>
-
+			<img src="https://www.goodfreephotos.com/cache/people/man-taking-photo-with-camera.jpg" alt="" id="image" class="center"/>
+<p> Hi I'm Dylan, I am cool calm and collected person, I'm also a skateboarder. Hit me up for your professional photo-shop edits</p>
+		<div class="center">
 		<ul>
-			<li>I like movies</li>
-			<li>I like to use photoshop</li>
-			<li>I have a beagle puppy.</li>
+			<li>I love Ice cream</li>
+			<li>I like to take photos of Nature</li>
+			<li>I like to save puppies.</li>
+			<li>I love going to concerts</li>
+			<li>I'm a great photographer</li>
+			<li>I love making Visual effects</li>
 		</ul>
+		</div>
 
 	</body>
 </html>
