--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 		<h1>Dylan Matthew Smith</h1>
 			<img src="https://www.dogzone.com/images/breeds/beagle.jpg" alt=""/>
 
-	<p>I like movies. I like to use Photoshop. I have a beagle puppy.</p>
+		<ul>
+			<li>I like movies</li>
+			<li>I like to use photoshop</li>
+			<li>I have a beagle puppy.</li>
+		</ul>
 
 	</body>
 </html>
